# snark-verifier

./: Cargo.toml
snark-verifier/: Cargo.toml
snark-verifier-sdk/: Cargo.toml
snark-verifier-sdk/src/: evm.rs  halo2.rs  lib.rs
snark-verifier/src/loader/evm/util/: executor.rs
